# phrase_cli

./: Cargo.toml  README.md  cli.md
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml
core/src/: commands.rs  lib.rs  paths.rs  ui.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/crypt/: aes.rs  helpers.rs  keys.rs  mod.rs  session_key.rs
crypto/src/tests/: aes_tests.rs  keys_tests.rs  pipeline_tests.rs  session_key_tests.rs
crypto/src/tests/common/: mod.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/database/: integration_tests.rs  mod.rs  unit_tests.rs
