[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
pgp          = "=0.17.0"
rand         = "0.8"
aes-gcm      = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf         = "0.12"
sha2         = "0.10"
argon2       = "0.5"          # ← this was missing
zeroize = "1"
ed25519-dalek = "2.2.0"
